src/test/ui/stability-attribute/generics-default-stability.stderr
error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:17:13
   |
LL | impl Trait1<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:21:13
   |
LL | impl Trait1<isize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:25:13
   |
LL | impl Trait2<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:84:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                             ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:84:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:89:12
   |
LL |     let _: Struct4 = STRUCT4;
   |            ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:90:12
   |
LL |     let _: Struct4<usize> = STRUCT4;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:91:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:91:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:97:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:97:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:102:12
   |
LL |     let _: Struct5 = STRUCT5;
   |            ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:103:12
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:105:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:105:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:160:28
   |
LL |     let _: Alias4<isize> = Alias4::Some(1);
   |                            ^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:160:12
   |
LL |     let _: Alias4<isize> = Alias4::Some(1);
   |            ^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:164:12
   |
LL |     let _: Alias4 = ALIAS4;
   |            ^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:165:12
   |
LL |     let _: Alias4<usize> = ALIAS4;
   |            ^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:166:28
   |
LL |     let _: Alias4<isize> = Alias4::Some(0);
   |                            ^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias4`: test
  --> $DIR/generics-default-stability.rs:166:12
   |
LL |     let _: Alias4<isize> = Alias4::Some(0);
   |            ^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:171:28
   |
LL |     let _: Alias5<isize> = Alias5::Some(1);
   |                            ^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:171:12
   |
LL |     let _: Alias5<isize> = Alias5::Some(1);
   |            ^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:175:12
   |
LL |     let _: Alias5 = ALIAS5;
   |            ^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:176:12
   |
LL |     let _: Alias5<usize> = ALIAS5;
   |            ^^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:178:28
   |
LL |     let _: Alias5<isize> = Alias5::Some(0);
   |                            ^^^^^^^^^^^^

warning: use of deprecated type alias `unstable_generic_param::Alias5`: test
  --> $DIR/generics-default-stability.rs:178:12
   |
LL |     let _: Alias5<isize> = Alias5::Some(0);
   |            ^^^^^^^^^^^^^

warning: use of deprecated variant `unstable_generic_param::Enum4::Some`: test
  --> $DIR/generics-default-stability.rs:232:27
   |
LL |     let _: Enum4<isize> = Enum4::Some(1);
   |                           ^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum4`: test
  --> $DIR/generics-default-stability.rs:232:12
   |
LL |     let _: Enum4<isize> = Enum4::Some(1);
   |            ^^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum4`: test
  --> $DIR/generics-default-stability.rs:236:12
   |
LL |     let _: Enum4 = ENUM4;
   |            ^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum4`: test
  --> $DIR/generics-default-stability.rs:237:12
   |
LL |     let _: Enum4<usize> = ENUM4;
   |            ^^^^^^^^^^^^

warning: use of deprecated variant `unstable_generic_param::Enum4::Some`: test
  --> $DIR/generics-default-stability.rs:238:27
   |
LL |     let _: Enum4<isize> = Enum4::Some(0);
   |                           ^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum4`: test
  --> $DIR/generics-default-stability.rs:238:12
   |
LL |     let _: Enum4<isize> = Enum4::Some(0);
   |            ^^^^^^^^^^^^

warning: use of deprecated variant `unstable_generic_param::Enum5::Some`: test
  --> $DIR/generics-default-stability.rs:243:27
   |
LL |     let _: Enum5<isize> = Enum5::Some(1);
   |                           ^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum5`: test
  --> $DIR/generics-default-stability.rs:243:12
   |
LL |     let _: Enum5<isize> = Enum5::Some(1);
   |            ^^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum5`: test
  --> $DIR/generics-default-stability.rs:247:12
   |
LL |     let _: Enum5 = ENUM5;
   |            ^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum5`: test
  --> $DIR/generics-default-stability.rs:248:12
   |
LL |     let _: Enum5<usize> = ENUM5;
   |            ^^^^^^^^^^^^

warning: use of deprecated variant `unstable_generic_param::Enum5::Some`: test
  --> $DIR/generics-default-stability.rs:250:27
   |
LL |     let _: Enum5<isize> = Enum5::Some(0);
   |                           ^^^^^^^^^^^

warning: use of deprecated enum `unstable_generic_param::Enum5`: test
  --> $DIR/generics-default-stability.rs:250:12
   |
LL |     let _: Enum5<isize> = Enum5::Some(0);
   |            ^^^^^^^^^^^^

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:36:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:40:20
   |
LL |     let _: Struct1<usize> = STRUCT1;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:41:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:70:27
   |
LL |     let _: Struct3<isize, usize> = STRUCT3;
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:72:27
   |
LL |     let _: Struct3<isize, isize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:73:27
   |
LL |     let _: Struct3<usize, usize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:97:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:103:20
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:105:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:113:19
   |
LL |     let _: Alias1<isize> = Alias1::Some(1);
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:117:19
   |
LL |     let _: Alias1<usize> = ALIAS1;
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:118:19
   |
LL |     let _: Alias1<isize> = Alias1::Some(0);
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:146:26
   |
LL |     let _: Alias3<isize, usize> = ALIAS3;
   |                          ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:148:26
   |
LL |     let _: Alias3<isize, isize> = Alias3::Ok(0);
   |                          ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:149:26
   |
LL |     let _: Alias3<usize, usize> = Alias3::Ok(0);
   |                          ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:171:19
   |
LL |     let _: Alias5<isize> = Alias5::Some(1);
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:176:19
   |
LL |     let _: Alias5<usize> = ALIAS5;
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:178:19
   |
LL |     let _: Alias5<isize> = Alias5::Some(0);
   |                   ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:185:18
   |
LL |     let _: Enum1<isize> = Enum1::Some(1);
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:189:18
   |
LL |     let _: Enum1<usize> = ENUM1;
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:190:18
   |
LL |     let _: Enum1<isize> = Enum1::Some(0);
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:218:25
   |
LL |     let _: Enum3<isize, usize> = ENUM3;
   |                         ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:220:25
   |
LL |     let _: Enum3<isize, isize> = Enum3::Ok(0);
   |                         ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:221:25
   |
LL |     let _: Enum3<usize, usize> = Enum3::Ok(0);
   |                         ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:243:18
   |
LL |     let _: Enum5<isize> = Enum5::Some(1);
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:248:18
   |
LL |     let _: Enum5<usize> = ENUM5;
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:250:18
   |
LL |     let _: Enum5<isize> = Enum5::Some(0);
   |                  ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'box_alloc_param'
  --> $DIR/generics-default-stability.rs:257:24
   |
LL |     let _: Box1<isize, System> = Box1::new(1);
   |                        ^^^^^^
   |
   = help: add `#![feature(box_alloc_param)]` to the crate attributes to enable

warning: use of deprecated field `unstable_generic_param::Struct4::field`: test
  --> $DIR/generics-default-stability.rs:84:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct4::field`: test
  --> $DIR/generics-default-stability.rs:91:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct5::field`: test
  --> $DIR/generics-default-stability.rs:97:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct5::field`: test
  --> $DIR/generics-default-stability.rs:105:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                                       ^^^^^^^^

error: aborting due to 31 previous errors; 40 warnings emitted

For more information about this error, try `rustc --explain E0658`.
